# pmp-file-api

./: .gitignore  ADVANCED_FEATURES.md  Cargo.toml  DOCUMENTATION.md  Dockerfile  README.md  config.example.yaml  docker-compose.yml  prometheus.yml
.github/workflows/: main.yml  pr.yml
examples/: README.md
examples/bash/: basic-operations.sh  versioning-example.sh
examples/python/: demo.py  file_api_client.py
migrations/: 20250113_add_advanced_features_mysql.sql  20250113_add_advanced_features_postgres.sql  20250113_add_advanced_features_sqlite.sql
src/: bulk.rs  caching.rs  config.rs  deduplication.rs  error.rs  health.rs  main.rs  metadata.rs  metrics.rs  processing.rs  search.rs  sharing.rs  versioning.rs  webhooks.rs
src/api/: handlers.rs  handlers_extended.rs  mod.rs  models.rs
src/storage/: azure.rs  gcs.rs  local.rs  mod.rs  mysql.rs  postgres.rs  redis.rs  s3.rs  sqlite.rs
