[package]
name = "pmp-file-api"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework
axum = { version = "0.7", features = ["multipart"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"

# Cloud Storage
aws-config = { version = "1.1", features = ["behavior-version-latest"] }
aws-sdk-s3 = "1.15"
azure_storage = "0.20"
azure_storage_blobs = "0.20"
google-cloud-storage = "0.22"
google-cloud-auth = "0.17"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "mysql", "sqlite", "chrono", "uuid", "json"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
bytes = "1.5"
mime = "0.3"
mime_guess = "2.0"
futures-util = "0.3"

# File Processing
image = { version = "0.25", features = ["jpeg", "png", "webp"] }
async-compression = { version = "0.4", features = ["tokio", "gzip", "brotli"] }
tokio-util = { version = "0.7", features = ["io"] }

# Virus Scanning
clamav-client = { version = "0.4", optional = true }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[features]
default = []
virus-scan = ["clamav-client"]

[dev-dependencies]
tempfile = "3.8"
